--- a/helmcharts/values.yaml
+++ b/helmcharts/values.yaml
@@ -4,5 +4,5 @@ image:
   repository: azpeclusteracrpe.azurecr.io/nodejs-app
   tag: 7fe51cd
 service:
-  type: LoadBalancer
+  type: NodePort
   port: 3000
