--- a/.github/workflows/deploy-iac-template.yaml
+++ b/.github/workflows/deploy-iac-template.yaml
@@ -81,14 +81,14 @@ jobs:
     #   if: steps.plan.outcome == 'failure'
     #   run: exit 1
 
-    - name: Terraform Apply
-      run: |
-        cd $PWD/Infrastructure
-        terraform apply -auto-approve -input=false
-    # - name: Terraform destroy
+    # - name: Terraform Apply
     #   run: |
     #     cd $PWD/Infrastructure
-    #     terraform destroy -auto-approve -input=false
+    #     terraform apply -auto-approve -input=false
+    - name: Terraform destroy
+      run: |
+        cd $PWD/Infrastructure
+        terraform destroy -auto-approve -input=false
 
     - name: Azure Login
       uses: azure/login@v1
